Revise flyweight-user-storage-provider example