@@ -1,6 +1,5 @@
 package com.github.thomasdarimont.keycloak.userstorage.flyweight;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -8,30 +7,35 @@ import java.util.stream.Collectors;
 
 class AcmeUserRepository {
 
-    public static final String ACME_ADMIN_ROLE = "acme-admin";
-    public static final String ACME_USER_ROLE = "acme-user";
+    public static final AcmeRole ACME_ADMIN_ROLE = new AcmeRole("1", "acme-admin", "Acme Admin Role");
+    public static final AcmeRole ACME_USER_ROLE = new AcmeRole("2", "acme-user", "Acme User Role");
+    public static final AcmeRole ACME_CLIENT_ROLE_TEST_CLIENT_MANAGER = new AcmeRole("1001", "acme-test-client-manager", "Acme Test Client Manager Role");
+
     private final List<AcmeUser> acmeUsers;
 
-    private final Map<String, Set<String>> userRoles;
+    private final Map<String, Set<AcmeRole>> userRoles;
 
     public AcmeUserRepository() {
-        acmeUsers = Arrays.asList(
-                new AcmeUser("1", "user1", "secret", "First1", "Last1", Map.of("attribute1", List.of("value1_1")), true),
-                new AcmeUser("2", "user2", "secret", "First2", "Last2", Map.of("attribute1", List.of("value1_2")), true),
-                new AcmeUser("3", "user3", "secret", "First3", "Last3", Map.of("attribute1", List.of("value1_3")), true),
-                new AcmeUser("4", "user4", "secret", "First4", "Last4", Map.of("attribute1", List.of("value1_4")), false)
+        acmeUsers = List.of(
+                new AcmeUser("1", "user1", "secret", "First1", "Last1",
+                        Map.of("attribute1", List.of("value1_1")), true),
+                new AcmeUser("2", "user2", "secret", "First2", "Last2",
+                        Map.of("attribute1", List.of("value1_2")), true),
+                new AcmeUser("3", "user3", "secret", "First3", "Last3",
+                        Map.of("attribute1", List.of("value1_3")), true),
+                new AcmeUser("4", "user4", "secret", "First4", "Last4",
+                        Map.of("attribute1", List.of("value1_4")), false)
         );
 
         userRoles = Map.ofEntries(
-                // user roles
-
+                // global user roles
                 Map.entry("1", Set.of(ACME_ADMIN_ROLE, ACME_USER_ROLE)),
                 Map.entry("2", Set.of(ACME_ADMIN_ROLE, ACME_USER_ROLE)),
                 Map.entry("3", Set.of(ACME_USER_ROLE)),
                 Map.entry("4", Set.of(ACME_USER_ROLE)),
 
-                // user client roles
-                Map.entry("test-client:1", Set.of("acme-test-client-manager"))
+                // client user roles
+                Map.entry("test-client:1", Set.of(ACME_CLIENT_ROLE_TEST_CLIENT_MANAGER))
         );
     }
 
@@ -68,18 +72,18 @@ class AcmeUserRepository {
         return true;
     }
 
-    public Set<String> getRoles(String username) {
+    public Set<AcmeRole> getRoles(String username) {
 
         AcmeUser user = findUserByUsernameOrEmail(username);
-        return getRolesByUserId(user.getId());
+        return getGlobalRolesByUserId(user.getId());
     }
 
 
-    public Set<String> getRolesByUserId(String userId) {
+    public Set<AcmeRole> getGlobalRolesByUserId(String userId) {
         return userRoles.get(userId);
     }
 
-    public Set<String> getClientRolesByUserId(String clientId, String userId) {
+    public Set<AcmeRole> getClientRolesByUserId(String clientId, String userId) {
         return userRoles.get(clientId + ":" + userId);
     }
 }
